--- a/Housing_Prices.ipynb
+++ b/Housing_Prices.ipynb
@@ -2462,7 +2462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "6ce54460",
    "metadata": {},
    "outputs": [
@@ -2487,6 +2487,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>LivingArea Sqft</th>\n",
        "      <th>1stFloor Sqft</th>\n",
        "      <th>2ndFloor Sqft</th>\n",
        "    </tr>\n",
@@ -2494,6 +2495,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>SalePrice Correlation</th>\n",
+       "      <td>0.708624</td>\n",
        "      <td>0.605852</td>\n",
        "      <td>0.319334</td>\n",
        "    </tr>\n",
@@ -2502,17 +2504,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                       1stFloor Sqft  2ndFloor Sqft\n",
-       "SalePrice Correlation       0.605852       0.319334"
+       "                       LivingArea Sqft  1stFloor Sqft  2ndFloor Sqft\n",
+       "SalePrice Correlation         0.708624       0.605852       0.319334"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sqft_df = clean_train_df[['1stFloor Sqft', '2ndFloor Sqft', 'Sale Price']]\n",
+    "sqft_df = clean_train_df[['LivingArea Sqft','1stFloor Sqft', '2ndFloor Sqft', 'Sale Price']]\n",
     "sqft_df = sqft_df[~sqft_df['Sale Price'].isnull()]\n",
     "sqft_vars = list(sqft_df)\n",
     "del sqft_vars[-1]\n",
@@ -2536,7 +2538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "f7bdb7a1",
    "metadata": {},
    "outputs": [
@@ -2735,7 +2737,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2746,7 +2748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "6805e799",
    "metadata": {},
    "outputs": [
@@ -3036,7 +3038,7 @@
        "[8 rows x 37 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3047,7 +3049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "15725885",
    "metadata": {},
    "outputs": [
@@ -3246,7 +3248,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3279,7 +3281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "e73c9e57",
    "metadata": {},
    "outputs": [],
@@ -3294,7 +3296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "db72a366",
    "metadata": {},
    "outputs": [
@@ -3644,7 +3646,7 @@
        "[1459 rows x 19 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3655,7 +3657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "b54ae274",
    "metadata": {},
    "outputs": [
@@ -3667,7 +3669,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3678,7 +3680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "dacd6ca0",
    "metadata": {},
    "outputs": [
@@ -3692,7 +3694,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3703,7 +3705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "id": "65378e7d",
    "metadata": {},
    "outputs": [
@@ -3807,7 +3809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "id": "d8159aee",
    "metadata": {},
    "outputs": [
@@ -3832,7 +3834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
    "id": "996eee72",
    "metadata": {},
    "outputs": [],
@@ -3845,7 +3847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 34,
    "id": "cb7c93f6",
    "metadata": {},
    "outputs": [
@@ -3855,7 +3857,7 @@
        "Series([], dtype: int64)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3866,7 +3868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "id": "c7c0f128",
    "metadata": {},
    "outputs": [
@@ -4216,7 +4218,7 @@
        "[1459 rows x 19 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4235,7 +4237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "f1592429",
    "metadata": {},
    "outputs": [],
@@ -4247,42 +4249,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "1b51cea7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5433/train_data\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02661444",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "db_string = f\"postgresql://postgres:{db_password}@housing-prices.ctpruadwlamv.us-east-2.rds.amazonaws.com:5432/housing-prices\"\n",
     "engine = create_engine(db_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f9b24f34",
+   "execution_count": 44,
+   "id": "5fdfee71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_train_df.to_sql(name='train', con=engine)"
+    "#mode = \"append\"\n",
+    "#jdbc_url=\"postgresql://housing-prices.ctpruadwlamv.us-east-2.rds.amazonaws.com:5432/housing-prices\"\n",
+    "#config = {\"user\":\"postgres\", \n",
+    "          #\"password\": \"dataanalytics\", \n",
+    "          #\"driver\":\"org.postgresql.Driver\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
+   "id": "f9b24f34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_train_df.to_sql(name='clean_train', con=engine, if_exists='append',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "a32f554c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_test_df.to_sql(name='train', con=engine)"
+    "clean_test_df.to_sql(name='clean_test', con=engine)"
    ]
   },
   {
