--- a/ml_model_connection_test.ipynb
+++ b/ml_model_connection_test.ipynb
@@ -716,7 +716,7 @@
    "hash": "6aa4fc708a0519ebfc93b1cdf704d475c82af6ab98081023454f243b98797160"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.10 64-bit ('PythonData': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -731,8 +731,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
