Housing_Prices & Predicting_Housing_Prices viewed - no changes, Machine_learning_Model formatted to include all database options with notes, moved all imports for each model to the top, cosolidating machine model steps correctly for display (stopped on decision tree), test connection to Database - working

--- a/Predicting_Housing_Prices.ipynb
+++ b/Predicting_Housing_Prices.ipynb
@@ -3560,7 +3560,8 @@
    "hash": "6aa4fc708a0519ebfc93b1cdf704d475c82af6ab98081023454f243b98797160"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.10 64-bit ('PythonData': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
