updated machine learning files

--- a/Machine_Learning_Linear_Regression.ipynb
+++ b/Machine_Learning_Linear_Regression.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ee37201c",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,6 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c1fe91ff",
    "metadata": {},
    "outputs": [],
@@ -851,31 +850,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "47430e9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Identifying Data Types to Test for Normality\n",
     "\n",
-    "# Column             dtype   Date Type               Model Type     Notes\n",
-    "\n",
-    "# HouseStyle         object  Categorical/Nominal     Classification Convert to int64\n",
+    "# Column             dtype   Date Type               Model Type     \n",
+    "# HouseStyle         object  Categorical/Nominal     Classification \n",
     "# No_of_Bedrooms     int64   Numerical/interval      Regression\n",
     "# No_of_Bath         int64   Numerical/interval      Regression     \n",
-    "# Garage_Type        object  Categorical/Dichotomous Classification Convert to binary \n",
+    "# Garage_Type        object  Categorical/Dichotomous Classification  \n",
     "# Total_Sqft         int64   Numberical/Continuous   Regression\n",
-    "# Lot_Location       object  Categorical/Nominal     Classification Convert to int64\n",
+    "# Lot_Location       object  Categorical/Nominal     Classification \n",
     "# YearBuilt          int64   Numberical/interval     Regression     \n",
     "# Year_Remodeled     int64   Numberical/interval     Regression \n",
-    "# FirstExterior      object  Categorical/Nominal     Classification Convert to int64\n",
-    "# SecondExterior     object  Categorical/Nominal     Classification Convert to int64\n",
-    "# MasonryVeneer_Type object  Categorical/Nominal     Classification Convert to int64\n",
+    "# FirstExterior      object  Categorical/Nominal     Classification \n",
+    "# SecondExterior     object  Categorical/Nominal     Classification \n",
+    "# MasonryVeneer_Type object  Categorical/Nominal     Classification \n",
     "# Neighborhood       object  Categorical/Nominal     Classification \n",
     "# Overall_Quality    int64   Categorical/Ordinal     Classification\n",
     "# Overall_Condition  int64   Categorical/Ordinal     Classification\n",
-    "# Sale_Condition     object  Categorical/Nominal     Classification Convert to int64\n",
-    "# Sale_Price         int64   Numberical/Continuous   Sim. or Multi Regression\n"
+    "# Sale_Condition     object  Categorical/Nominal     Classification \n",
+    "# Sale_Price         int64   Numberical/Continuous   Regression"
    ]
   },
   {
