--- a/Machine_Learning_Mos_Original.ipynb
+++ b/Machine_Learning_Mos_Original.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "id": "4bdb15b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "id": "9f5125ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'termcolor'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-f4afe6c33602>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtermcolor\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcolored\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mcl\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'termcolor'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
@@ -102,13 +116,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0b79fd0b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "c802221c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "311b5a4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,12 +161,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bf562eff",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "5b8d1eb5",
    "metadata": {},
    "source": [
     "# Machine Learning Model"
@@ -157,6 +176,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f699de77",
    "metadata": {},
    "source": [
     "### 1. Create a model - Linear Regression"
@@ -164,6 +184,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "33d7c6fd",
    "metadata": {},
    "source": [
     "#### Import data"
@@ -171,7 +192,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
+   "id": "94db1697",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +203,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-48e96d3d70e1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Import data from PostgresSQL using SQLalchemy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#Connect to PostgresSQL\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mdb_string\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mf\"postgresql://postgres:{db_password}@housing-prices.ctpruadwlamv.us-east-2.rds.amazonaws.com:5432/housing-prices\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdb_string\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-3-48e96d3d70e1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Import data from PostgresSQL using SQLalchemy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#Connect to PostgresSQL\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mdb_string\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mf\"postgresql://postgres:{db_password}@housing-prices.ctpruadwlamv.us-east-2.rds.amazonaws.com:5432/housing-prices\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdb_string\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'db_password' is not defined"
      ]
     }
@@ -196,6 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "0a2fe410",
    "metadata": {},
    "outputs": [
     {
@@ -219,6 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "fb97581c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,6 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "840bd931",
    "metadata": {},
    "outputs": [
     {
@@ -429,6 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "d8794d0e",
    "metadata": {},
    "outputs": [
     {
@@ -471,6 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff88c16c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -478,6 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "1bb12a38",
    "metadata": {},
    "outputs": [
     {
@@ -790,6 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "47d4a3d3",
    "metadata": {},
    "outputs": [
     {
@@ -826,6 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "54f0ceea",
    "metadata": {},
    "outputs": [
     {
@@ -862,6 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "4d8b5412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,6 +920,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7477fa0",
    "metadata": {},
    "source": [
     "#### Transform Data -  Encoding"
@@ -897,6 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "43531233",
    "metadata": {},
    "outputs": [
     {
@@ -1278,6 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "19308d85",
    "metadata": {},
    "outputs": [
     {
@@ -1325,6 +1359,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "0d73e558",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,6 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "a153bc39",
    "metadata": {},
    "outputs": [
     {
@@ -1480,6 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "856b48cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1489,6 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "c1f4378e",
    "metadata": {},
    "outputs": [
     {
@@ -1514,6 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "24a3ad70",
    "metadata": {
     "scrolled": true
    },
@@ -1638,6 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "61684c72",
    "metadata": {},
    "outputs": [
     {
@@ -1668,6 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "fca6c762",
    "metadata": {},
    "outputs": [
     {
@@ -1704,6 +1745,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "9d310219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1739,6 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "0da9cc7e",
    "metadata": {},
    "outputs": [
     {
@@ -1778,6 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "620c7e21",
    "metadata": {},
    "outputs": [
     {
@@ -1813,32 +1857,11 @@
     "print(cl('R-Squared of ElasticNet is {}'.format(r2(y_test, en_yhat)), attrs = ['bold']))\n",
     "print('-------------------------------------------------------------------------------')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1852,7 +1875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
