--- a/Machine_Learning_Mos_Updated.ipynb
+++ b/Machine_Learning_Mos_Updated.ipynb
@@ -18,10 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "e270ea29",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'termcolor'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-fbe139b574af>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m# Having an issue with the bollow module - Probably becuase it opened in the wrong env\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mtermcolor\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcolored\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mcl\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'termcolor'"
+     ]
+    }
+   ],
    "source": [
     "# Import Modules\n",
     "\n",
@@ -37,7 +49,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sb\n",
     "# Having an issue with the bollow module - Probably becuase it opened in the wrong env\n",
-    "# from termcolor import colored as cl \n",
+    "from termcolor import colored as cl \n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -65,11 +77,11 @@
     "\n",
     "from collections import Counter\n",
     "# Having an issue with the bollow module\n",
-    "# from imblearn.combine import SMOTEENN\n",
+    "from imblearn.combine import SMOTEENN\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
     "# Having an issue with the bollow module  - Probably becuase it opened in the wrong env\n",
-    "# from imblearn.metrics import classification_report_imbalanced "
+    "from imblearn.metrics import classification_report_imbalanced "
    ]
   },
   {
@@ -1368,6 +1380,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0f0d29bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop Columns\n",
+    "df2 = df2.drop(['HouseStyle',\n",
+    "          'Garage_Type',\n",
+    "          'Lot_Location',\n",
+    "          'FirstExterior',\n",
+    "          'SecondExterior',\n",
+    "          'MasonryVeneer_Type',\n",
+    "          'Neighborhood',\n",
+    "          'Sale_Condition'],\n",
+    "         axis=1)\n",
+    "df2.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "id": "3a6dc859",
    "metadata": {},
@@ -2543,7 +2575,7 @@
     }
    ],
    "source": [
-    "X_var = df[['HouseStyle',\n",
+    "X_var = encoded_df[['HouseStyle',\n",
     "        'No_of_Bedrooms',\n",
     "        'No_of_Bath',\n",
     "        'Garage_Type',\n",
